css/style.css
.content-container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

/* Header */

#logo {
    height: 60px;
    width: 60px;
}

#game-info button {
  min-width: 90px;
}

/* Side-Bar */

#side-bar {
  background-color: papayawhip;
}

#about-text,
#instructions-text {
  background-color: #3d3d3d;
  color: ghostwhite;
}

/* Controls */

.dropdown-item {
  cursor: pointer;
}

#startButton {
  font-size: 2rem;
}

#resetButton {
  font-size: 1.5rem;
}

/* Game Area */

#computer-area {
  background-color: darkgrey;
}

#c-tiles {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(3, auto);
  grid-template-rows: repeat(3, auto);
  gap: 15px;
  justify-content: center;
}

#c-tiles .grid-item {
  height: 120px;
  width: 120px;
}

.tile {
  background-color: #eac086;
  border-radius: 10px;
  box-shadow: 0 0px 2px 2px rgba(0, 0, 0, 0.5);
}

#player-area {
  background-color: #3d3d3d;
  min-height: 100px;
}

#p-tiles {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 60%;
}

#p-tiles .grid-item {
  height: 90px;
  width: 90px;
}

/* Media Queries */

@media screen and (max-width: 992px) {

  #c-tiles .grid-item {
    height: 100px;
    width: 100px;
  }

  #p-tiles {
    width: 80%;
  }

}

@media screen and (max-width: 600px) {

  #p-tiles {
    width: 100%;
  }

  #p-tiles .grid-item {
    height: 80px;
    width: 80px;
  }

}

@media screen and (max-width: 360px) {

  #c-tiles .grid-item {
    height: 80px;
    width: 80px;
  }

}

